# TimeTracker

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
public/: splashscreen.html
scripts/: build-macos.sh  build-ubuntu.sh  build-windows.ps1
src-react/: App.css  App.tsx
src-react/components/: GlobalErrorHandler.tsx  Layout.tsx
src-react/hooks/: useTrackingState.ts
src-react/lib/: i18n.tsx  tauri.ts  toast.tsx  utils.ts
src-react/pages/: AppSettings.tsx  Dashboard.tsx  JiraSettings.tsx  Projects.tsx  Review.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  startup.rs
src-tauri/src/commands/: jira.rs  mod.rs  projects.rs  sessions.rs  settings.rs  splashscreen.rs  storage.rs  tracking.rs  update.rs
src-tauri/src/db/: mod.rs
src-tauri/src/modules/: activity_monitor.rs  attribution.rs  git_probe.rs  huddle_monitor.rs  jira_client.rs  mod.rs  project_registry.rs  session_store.rs  settings_manager.rs
src-tauri/src/platform/: mod.rs  stub.rs  types.rs  windows.rs
src-tauri/src/platform/linux/: mod.rs
src-tauri/src/platform/macos/: mod.rs
src-tauri/src/platform/windows/: mod.rs
